Local Storage from JS object

--- a/qml.qrc
+++ b/qml.qrc
@@ -30,5 +30,6 @@
         <file>static/kosku2.jpg</file>
         <file>static/kost.jpg</file>
         <file>static/rumah-kost-mahasiswa-dekat-undip-di-tembalang-selatan-semarang.jpg</file>
+        <file>Storage.js</file>
     </qresource>
 </RCC>
